--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,11 @@
         <context.version>3.1.2.RELEASE</context.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <springdoc.openapi.ui>1.8.0</springdoc.openapi.ui>
+        <springdoc.version>2.5.0</springdoc.version>
     </properties>
+
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -164,6 +167,12 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>${springdoc.openapi.ui}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
 
     </dependencies>
