--- a/compose.yaml
+++ b/compose.yaml
@@ -1,26 +1,24 @@
 version: '3.8'
 services:
-
   portal-service:
     container_name: portal-service
     build: .
     ports:
       - ${SPRING_LOCAL_PORT}:${SPRING_DOCKER_PORT}
-      - ${LOCAL_GRPC_PORT}:${DOCKER_GRPC_PORT}
     env_file: .env
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:${POSTGRESDB_DOCKER_PORT}/${POSTGRESDB_DATABASE}
+      SPRING_DATASOURCE_URL: jdbc:postgresql://b2b-db:${POSTGRESDB_DOCKER_PORT}/${POSTGRESDB_DATABASE}
       SPRING_DATASOURCE_USERNAME: ${POSTGRESDB_USER}
       SPRING_DATASOURCE_PASSWORD: ${POSTGRESDB_ROOT_PASSWORD}
     depends_on:
       - postgres
     networks:
-      - b2b-network  # Подключаем этот сервис к той же сети
+      - b2b-network
 
   postgres:
     container_name: b2b-db
     image: postgres:16
-    env_file: ./.env
+    env_file: .env
     environment:
       POSTGRES_USER: ${POSTGRESDB_USER}
       POSTGRES_PASSWORD: ${POSTGRESDB_ROOT_PASSWORD}
@@ -35,15 +33,10 @@ services:
     networks:
       - b2b-network
 
-
 networks:
-  b2b-network:  # Определяем сеть "b2b-network"
-    driver: bridge  # Используем стандартный драйвер bridge для локальной сети Docker
+  b2b-network:
     external: true
 
 volumes:
   postgres:
     driver: local
-
-
-
