--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   portal-service:
     container_name: portal-service
@@ -32,6 +32,14 @@ services:
     restart: unless-stopped
     networks:
       - b2b-network
+
+  pgadmin:
+    image: dpage/pgadmin4:6.14
+    ports:
+      - "5051:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@admin.org
+      - PGADMIN_DEFAULT_PASSWORD=admin
 
 networks:
   b2b-network:
