--- a/compose.yaml
+++ b/compose.yaml
@@ -40,6 +40,8 @@ services:
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.org
       - PGADMIN_DEFAULT_PASSWORD=admin
+    networks:
+      - b2b-network
 
 networks:
   b2b-network:
